tests/errors/binding/let-unbound.fil
comp main<'G: 1>() -> () {
  let value = ?;
}